# kkt-solver

./: .gitignore  LICENCE  README.md  pyproject.toml
src/: kkt_solution.py  kkt_solver.py  utils.py
src/kkt_solver/: __init__.py  kkt_solution.py  kkt_solver.py  utils.py
tests/: test_kkt_solver.py
