[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kkt-solver"
version = "0.0.1"
description = "A hybrid analytical/numerical KKT solver for constrained optimization problems."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["optimization", "kkt", "sympy", "numerical-analysis"]
license = {file = "LICENSE"} 
authors = [
    {name = "Christian Ottosen", email = "christian.ottosen02@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "colorama>=0.4.6",
    "sympy>=1.14.0", 
]

[project.urls]
Homepage = "https://github.com/cottozen/kkt-solver"
"Bug Tracker" = "https://github.com/cottozen/kkt-solver/issues"

[tool.setuptools.packages]
find = {where = ["src"]}
